--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,15 +10,16 @@
     <android.support.v4.view.ViewPager
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:id="@+id/viewPager"/>
+        android:id="@+id/viewPager"
+
+        />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:alpha=".5"
-        android:layout_above="@+id/dotsLayout"
-        android:background="@android:color/white"
-        android:layout_marginBottom="15dp"></View>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="69dp"
+        android:alpha=".5" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,29 +29,31 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:gravity="center"
+
         android:layout_marginBottom="55sp"></LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Skip"
-        android:textSize="16sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="@null"
         android:id="@+id/bnSkip"
+        android:layout_width="125dp"
+        android:layout_height="45dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
-        android:textColor="@android:color/white"/>
+        android:background="@drawable/border"
+        android:text="Skip"
+        android:textColor="@android:color/black"
+
+        android:textSize="16sp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Next"
-        android:textSize="16sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@null"
         android:id="@+id/bnNext"
+        android:layout_width="125dp"
+        android:layout_height="45dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
-        android:textColor="@android:color/white"/>
+        android:background="@drawable/border"
+        android:text="Next"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 </RelativeLayout>
