--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/titleText"
         android:textSize="15dp"
-        style="@style/Toolbar.TitleText"/>
+        style="@style/Widget.Support.CoordinatorLayout"/>
 
 
 </android.support.v7.widget.Toolbar>
