--- a/app/src/main/res/layout/fourth_slide.xml
+++ b/app/src/main/res/layout/fourth_slide.xml
@@ -1,30 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorSlide_4">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorSlide_4"><![CDATA[
+
+    />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    ]]>
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/slide_title"
+        android:layout_width="339dp"
         android:layout_height="wrap_content"
-        android:text="@string/slide_4_title"
-        android:textColor="@android:color/white"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:text="Speaking and Listening"
+        android:textAlignment="center"
         android:textSize="30sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="200dp"
-        android:id="@+id/slide_title"/>
+        app:fontFamily="sans-serif-medium"
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="389dp"
+        android:layout_height="278dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="37dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="-15dp"
+        android:layout_marginRight="-15dp"
+        android:layout_marginBottom="277dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292"
+        app:srcCompat="@drawable/i44" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/slide_4_desc"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:gravity="center_horizontal"
-        android:layout_below="@id/slide_title"
-        android:layout_marginTop="12dp"
         android:id="@+id/slide_desc"
+        android:layout_width="371dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/slide_title"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="40sp"
+        android:layout_marginTop="337dp"
         android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp"/>
+        android:layout_marginBottom="180dp"
+        android:gravity="center_horizontal"
+        android:text="Learn simple sentences and check pronunciation."
+        android:textColor="@android:color/black"
+        android:textSize="24dp" />
 </RelativeLayout>
