--- a/app/src/main/res/layout/second_slide.xml
+++ b/app/src/main/res/layout/second_slide.xml
@@ -1,30 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorSlide_2">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/slide_2_title"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="200dp"
-        android:id="@+id/slide_title"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/slide_title"
+        android:layout_width="wrap_content"
+        android:layout_height="86dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:text="Writing and Listening"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:fontFamily="sans-serif-medium"
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="357dp"
         android:layout_height="wrap_content"
-        android:text="@string/slide_2_desc"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:gravity="center_horizontal"
-        android:layout_below="@id/slide_title"
-        android:layout_marginTop="12dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginTop="183dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="280dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292"
+        app:srcCompat="@drawable/i2" />
+
+    <TextView
         android:id="@+id/slide_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="107dp"
+        android:layout_below="@id/slide_title"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="40sp"
+        android:layout_marginTop="280dp"
         android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp"/>
+        android:layout_marginBottom="175dp"
+        android:gravity="center_horizontal"
+        android:text="Improve writing skills and know the pronunciation."
+        android:textColor="@android:color/black"
+        android:textSize="24dp" />
 </RelativeLayout>
