--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,41 +19,57 @@
     <color name="orange">#EAAD43</color>
     <color name="textColor">#ffffff</color>
     <color name="Dark">#2F333F</color>
-    <color name="active_dots">#fffafa</color>
+    <color name="active_dots">#3395ff</color>
     <color name="inactive_dots">#83878b</color>
 
 
     <!-- Screens background color-->
-    <color name="colorSlide_1">#f64c73</color>
-    <color name="colorSlide_2">#20d2bb</color>
-    <color name="colorSlide_3">#3395ff</color>
-    <color name="colorSlide_4">#c873f4</color>
+
+
+    <color name="colorSlide_1">#00FFFFFF</color>
+
+    <color name="colorSlide_2">#FFFDFD</color>
+
+    <color name="colorSlide_3">#FFFDFD</color>
+
+    <color name="colorSlide_4">#FFFDFD</color>
 
     <!-- dots inactive colors -->
+
+
     <color name="dot_dark_screen1">#d1395c</color>
+
     <color name="dot_dark_screen2">#14a895</color>
+
     <color name="dot_dark_screen3">#2278d4</color>
+
     <color name="dot_dark_screen4">#a854d4</color>
 
     <!-- dots active colors -->
+
+
     <color name="dot_light_screen1">#f98da5</color>
+
     <color name="dot_light_screen2">#8cf9eb</color>
+
     <color name="dot_light_screen3">#93c6fd</color>
+
     <color name="dot_light_screen4">#e4b5fc</color>
 
-    <array name="array_dot_active">
-        <item>@color/dot_light_screen1</item>
-        <item>@color/dot_light_screen2</item>
-        <item>@color/dot_light_screen3</item>
-        <item>@color/dot_light_screen4</item>
-    </array>
 
-    <array name="array_dot_inactive">
-        <item>@color/dot_dark_screen1</item>
-        <item>@color/dot_dark_screen2</item>
-        <item>@color/dot_dark_screen3</item>
-        <item>@color/dot_dark_screen4</item>
-    </array>
+    <array name="array_dot_active">
+
+    <item>@color/dot_light_screen1</item>
+
+    <item>@color/dot_light_screen2</item>
+
+    <item>@color/dot_light_screen3</item>
+
+    <item>@color/dot_light_screen4</item>
+
+</array>
+
+
 
 
 
