--- a/app/src/main/res/layout/activity_uyireluthu.xml
+++ b/app/src/main/res/layout/activity_uyireluthu.xml
@@ -140,7 +140,8 @@
         android:layout_height="80dp"
         android:layout_marginTop="26dp"
         android:layout_marginLeft="270dp"
-        app:srcCompat="@drawable/t"
+        app:srcCompat="@drawable/sound1"
+        android:background="@color/white"
         tools:layout_editor_absoluteX="177dp"
         android:onClick="playIT"
         android:scaleType="fitCenter"
