--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/titleText"
         android:textSize="15dp"
+        android:textColor="@color/white"
         style="@style/Widget.Support.CoordinatorLayout"/>
 
 
