--- a/app/src/main/res/layout/activity_select_lesson.xml
+++ b/app/src/main/res/layout/activity_select_lesson.xml
@@ -25,21 +25,24 @@
 
             <TextView
                 android:id="@+id/textViewName"
-                android:layout_width="99dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="191dp"
-                android:layout_marginLeft="191dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="1dp"
-                android:layout_marginRight="1dp"
+
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+
+
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_toStartOf="@+id/btnLogout"
                 android:layout_toLeftOf="@+id/btnLogout"
+                android:gravity="right"
                 android:textColor="#FFFFFF"
-                android:textSize="18dp"
-                android:gravity="right"/>
+                android:textSize="18dp" />
 
             <Button
                 android:id="@+id/btnLogout"
